<resources>
    <string name="app_name">MReader</string>


    <!--登录界面-->
    <string name="activity_login_str_login">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="activity_login_logo_title">文档共享</string>
    <string name="activity_login_username">用户名</string>
    <string name="activity_login_password">密码</string>
    <string name="acticity_login_str_otherlogin">--或者你可以用以下方式登录--</string>
    <string name="java_login_message_pd">登录中...</string>
    <string name="java_login_ServerError">服务器异常</string>
    <string name="java_login_notmatch">登录失败,请检查账户或密码</string>
    <string name="java_login_paser_in">内部解析错误</string>
    <string name="java_login_space_input">账户或密码为空</string>
    <string name="java_login_networkerror">网络不可用</string>


    <!--navigationview 界面-->
    <string name="navigation_doc_seclected_title">精选文档</string>
    <string name="navigation_mydoc">我的文档</string>
    <string name="navigation_mymessage_title">我的消息</string>
    <string name="navigation_recharge_title">充值</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <!--微信接入返回-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="navigation_setting_title">设置</string>
    <string name="open_with_browser">用浏览器打开</string>
    <string name="share">分享到</string>
    <string name="share_tail">\\t\\n 分享自文赚，分享文档，享受赚钱</string>

    <!--设置界面-->
    <string name="pre_refresh_data" translatable="false">refresh_data</string>
    <string name="pre_get_image" translatable="false">get_image</string>
    <string name="pre_status_bar" translatable="false">pre_status_bar</string>
    <string name="pre_nav_color" translatable="false">pre_nav_color</string>
    <string name="pre_cache_size" translatable="false">CacheSize</string>
    <string name="pre_author" translatable="false">author</string>
    <string name="pre_feedback" translatable="false">feedback</string>
    <string name="pre_version" translatable="false">version</string>
    <string name="cache_size">缓存大小</string>
    <string name="update_title">有更新可用</string>
    <string name="update_description">新版%1$s版本可用\\n更新内容\\n%2$s</string>
    <string name="update_button">现在升级</string>
    <string name="common_cancel">取消</string>
    <string name="update_no_update">没有更新可用</string>
    <string name="pre_loginout">loginout</string>
</resources>
